Problem: managing the string/int mapping for steps in actor is complex
Solution: hide inside the class

Signed-off-by: Michal Vyskocil <michalvyskocil@eaton.com>

--- a/src/Makemodule.am
+++ b/src/Makemodule.am
@@ -19,6 +19,7 @@ include_HEADERS = \
 
 src_libagent_cm_la_SOURCES = \
     src/cmstats.c \
+    src/cmsteps.c \
     src/bios_cm_server.c \
     src/platform.h
 
