--- a/configure.ac
+++ b/configure.ac
@@ -498,6 +498,7 @@ AC_CONFIG_FILES([Makefile
 AM_COND_IF([WITH_SYSTEMD_UNITS],
     [AC_CONFIG_FILES([
                  src/bios-agent-cm.service
+                 src/bios-agent-cm.conf
     ])],
     [])
 
