Problem: debian package build fail
Solution: remove spurious usr from tmpfiles path

Signed-off-by: Michal Vyskocil <michalvyskocil@eaton.com>

--- a/src/Makemodule-local.am
+++ b/src/Makemodule-local.am
@@ -1,5 +1,5 @@
 
 if WITH_SYSTEMD_UNITS
-tmpfilesdir = @prefix@/usr/lib/tmpfiles.d
+tmpfilesdir = @prefix@/lib/tmpfiles.d
 tmpfiles_DATA = src/bios-agent-cm.conf
 endif WITH_SYSTEMD_UNITS
