problem: BIOS-1997: type in service file Solution: fix it
Signed-off-by: Chernikava, Alena <AlenaChernikava@Eaton.com>

--- a/src/bios-agent-cm.service.in
+++ b/src/bios-agent-cm.service.in
@@ -12,7 +12,7 @@ EnvironmentFile=-/etc/default/bios__%n.conf
 EnvironmentFile=-/etc/bios/bios-db-rw
 Environment="prefix=@prefix@"
 ExecStart=@prefix@/bin/bios-agent-cm
-Restart=allways
+Restart=always
 
 [Install]
 WantedBy=bios.target
