--- a/src/bios-agent-cm.service.in
+++ b/src/bios-agent-cm.service.in
@@ -1,10 +1,12 @@
 [Unit]
 Description=BIOS computation services (min, max, averages)
+Requires=malamute.service
 After=malamute.service
 PartOf=bios.target
 
 [Service]
 Type=simple
+User=bios
 EnvironmentFile=-/usr/share/bios/etc/default/bios
 EnvironmentFile=-/usr/share/bios/etc/default/bios__%n.conf
 EnvironmentFile=-/etc/default/bios
