--- a/src/Makemodule-local.am
+++ b/src/Makemodule-local.am
@@ -1,5 +1,5 @@
 
 if WITH_SYSTEMD_UNITS
 tmpfilesdir = @prefix@/lib/tmpfiles.d
-tmpfiles_DATA = src/bios-agent-cm.conf
+tmpfiles_DATA = src/fty_metric_compute.conf.in
 endif WITH_SYSTEMD_UNITS
