--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -29,15 +29,16 @@ Build-Depends: debhelper (>= 9),
     libczmq-dev,
     libmlm-dev,
     libfty-proto-dev,
+# necessary for systemd.pc to get unit install path
     systemd,
     dh-systemd,
 Build-Depends-Indep: asciidoc,
                      xmlto
 
-Package: libfty-metric-compute0
+Package: libfty-metric-compute1
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: fty-metric-compute
+Description: 42ity computation services on metrics shared library
  This package contains shared library for fty-metric-compute: 42ity computation services on metrics
 
 Package: libfty-metric-compute-dev
@@ -48,8 +49,8 @@ Depends:
     libczmq-dev,
     libmlm-dev,
     libfty-proto-dev,
-    libfty-metric-compute0 (= ${binary:Version})
-Description: development files for fty-metric-compute
+    libfty-metric-compute1 (= ${binary:Version})
+Description: 42ity computation services on metrics development tools
  This package contains development files for fty-metric-compute: 42ity computation services on metrics
 
 Package: fty-metric-compute
@@ -65,6 +66,6 @@ Priority: extra
 Depends:
     fty-metric-compute (= ${binary:Version}),
     ${misc:Depends}
-Description: debugging symbols for fty-metric-compute
+Description: 42ity computation services on metrics debugging symbols
  This package contains the debugging symbols for fty-metric-compute : 42ity computation services on metrics.
 
