PROBLEM: Old name is being used here and there
SOLUTION: Change it.

Signed-off-by: Karol Hrdina <KarolHrdina@Eaton.com>

--- a/src/fty-metric-compute.cfg.in
+++ b/src/fty-metric-compute.cfg.in
@@ -1,4 +1,4 @@
-#   bios-agent-cm configuration
+#   fty-metric-compute configuration
 
 server
     timeout = 10000     #   Client connection timeout, msec
