PROBLEM: Bad service name in PartOf
SOLUTION: Fix it.

Signed-off-by: Karol Hrdina <KarolHrdina@Eaton.com>

--- a/src/fty-metric-compute.service.in
+++ b/src/fty-metric-compute.service.in
@@ -2,7 +2,7 @@
 Description=42ity computation services (min, max, averages)
 Requires=malamute.service
 After=malamute.service
-PartOf=fty.target
+PartOf=bios.target
 
 [Service]
 Type=simple
