--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -24,18 +24,16 @@ Maintainer:     fty-metric-compute Developers <eatonipcopensource@eaton.com>
 Standards-Version: 3.9.7
 Build-Depends: debhelper (>= 9),
     pkg-config,
-    dh-autoreconf,
     libzmq3-dev,
     libczmq-dev,
     libmlm-dev,
     libfty-proto-dev,
-# necessary for systemd.pc to get unit install path
     systemd,
     dh-systemd,
-Build-Depends-Indep: asciidoc,
-                     xmlto
+    asciidoc-base | asciidoc, xmlto,
+    dh-autoreconf
 
-Package: libfty-metric-compute1
+Package: libfty-metric-compute0
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: 42ity computation services on metrics shared library
@@ -49,7 +47,7 @@ Depends:
     libczmq-dev,
     libmlm-dev,
     libfty-proto-dev,
-    libfty-metric-compute1 (= ${binary:Version})
+    libfty-metric-compute0 (= ${binary:Version})
 Description: 42ity computation services on metrics development tools
  This package contains development files for fty-metric-compute: 42ity computation services on metrics
 
