--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
+# This is a skeleton created by zproject.
+# You can add hand-written code here.
 save.xml
-builds/cmake/
 # Object files
 *.o
 *.so
@@ -61,6 +62,8 @@ src/test-suite.log
 src/.dirstamp
 
 # CMake cache
+builds/cmake/
+*.cmake
 CMakeCache.txt
 CMakeFiles/
 CTestTestfile.cmake
@@ -82,6 +85,12 @@ tmp/
 # Valgrind files
 callgrind*
 vgcore*
+
+# Vagrant files
+.vagrant
+
+# CLion / PyCharm
+.idea
 
 # GYP files
 project.Makefile
