--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,10 @@ compile_commands.json
 DartConfiguration.tcl
 install_manifest.txt
 Testing/
+
+# CMake in general
 builds/cmake/
+CMake*
 *.cmake
 
 # Repositories downloaded by CI integration scripts
