Pull metrics from shm instead of malamute stream
Signed-off-by: barraudl <lilianbarraud@eaton.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,8 @@ DISTCHECK_CONFIGURE_FLAGS = \
 
 ACLOCAL_AMFLAGS = -I config
 
+AM_CXXFLAGS = \
+    -std=c++11
 
 AM_CPPFLAGS = \
     ${libsodium_CFLAGS} \
@@ -17,9 +19,11 @@ AM_CPPFLAGS = \
     ${log4cplus_CFLAGS} \
     ${fty_common_logging_CFLAGS} \
     ${fty_proto_CFLAGS} \
+    ${fty_shm_CFLAGS} \
+    -D__STDC_FORMAT_MACROS \
     -I$(srcdir)/include
 
-project_libs = ${libsodium_LIBS} ${libzmq_LIBS} ${czmq_LIBS} ${malamute_LIBS} ${log4cplus_LIBS} ${fty_common_logging_LIBS} ${fty_proto_LIBS}
+project_libs = ${libsodium_LIBS} ${libzmq_LIBS} ${czmq_LIBS} ${malamute_LIBS} ${log4cplus_LIBS} ${fty_common_logging_LIBS} ${fty_proto_LIBS} ${fty_shm_LIBS}
 
 SUBDIRS = doc
 SUBDIRS += include
@@ -47,6 +51,7 @@ EXTRA_DIST += \
     Findlog4cplus.cmake \
     Findfty_common_logging.cmake \
     Findfty_proto.cmake \
+    Findfty_shm.cmake \
     builds/cmake/Modules/ClangFormat.cmake \
     builds/cmake/clang-format-check.sh.in \
     builds/cmake/Config.cmake.in \
