--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -31,6 +31,7 @@ Build-Depends: debhelper (>= 9),
     liblog4cplus-dev,
     libfty-common-logging-dev,
     libfty-proto-dev,
+    libfty-shm-dev,
     systemd,
     dh-systemd,
     asciidoc-base | asciidoc, xmlto,
@@ -55,6 +56,7 @@ Depends:
     liblog4cplus-dev,
     libfty-common-logging-dev,
     libfty-proto-dev,
+    libfty-shm-dev,
     libfty-metric-compute0 (= ${binary:Version})
 Description: fty-metric-compute development tools
  This package contains development files for fty-metric-compute:
