--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@
 ### Note: Customized after generation; take care upon regens
 
 language:
-- c
+- cpp
 
 cache:
 - ccache
@@ -95,10 +95,14 @@ pkg_src_zeromq_ubuntu14: &pkg_src_zeromq_ubuntu14
 # is needed for C++11 support; docker envs are usually faster to start up
 addons:
   apt:
-    sources: *pkg_src_zeromq_ubuntu14
+    sources: 
+    - *pkg_src_zeromq_ubuntu14
+    - ubuntu-toolchain-r-test
     packages: &pkg_deps_common
     - *pkg_deps_devtools
     - *pkg_deps_prereqs
+    - gcc-4.9
+    - g++-4.9
 
 matrix:
   include:
@@ -106,27 +110,39 @@ matrix:
     os: linux
     addons:
       apt:
-        sources: *pkg_src_zeromq_ubuntu14
+        sources: 
+        - *pkg_src_zeromq_ubuntu14
+        - ubuntu-toolchain-r-test
         packages:
         - *pkg_deps_common
         - *pkg_deps_doctools
+        - gcc-4.9
+        - g++-4.9
   - env: BUILD_TYPE=valgrind
     os: linux
     dist: trusty
     addons:
       apt:
-        sources: *pkg_src_zeromq_ubuntu14
+        sources: 
+        - *pkg_src_zeromq_ubuntu14
+        - ubuntu-toolchain-r-test
         packages:
         - valgrind
         - *pkg_deps_common
+        - gcc-4.9
+        - g++-4.9
   - env: BUILD_TYPE=default ADDRESS_SANITIZER=enabled
     os: linux
     dist: trusty
     addons:
       apt:
-        sources: *pkg_src_zeromq_ubuntu14
+        sources: 
+        - *pkg_src_zeromq_ubuntu14
+        - ubuntu-toolchain-r-test
         packages:
         - *pkg_deps_common
+        - gcc-4.9
+        - g++-4.9
 ### Note: we don't use CMake
 # - env: BUILD_TYPE=cmake DO_CLANG_FORMAT_CHECK=1 CLANG_FORMAT=clang-format-5.0
 # For non-cmake users, there is an autotools solution with a bit more overhead
