--- a/src/fty-metric-compute.service.in
+++ b/src/fty-metric-compute.service.in
@@ -2,6 +2,13 @@
 Description=42ity computation services (min, max, averages)
 Requires=malamute.service
 After=malamute.service
+
+# Enable FLA... once, do not keep retrying if EULA is not accepted yet
+# There are no assets monitored and metrics produced before FLA anyway
+After=fty-license-accepted.target
+Wants=fty-license-accepted.target
+Requisite=fty-license-accepted.target
+
 PartOf=bios.target
 
 [Service]
