--- a/.gitignore
+++ b/.gitignore
@@ -64,15 +64,8 @@ src/stamp-h1
 src/test-suite.log
 src/.dirstamp
 
-# CMake cache
-CMakeCache.txt
-CMakeFiles/
-CTestTestfile.cmake
-cmake_install.cmake
-compile_commands.json
-DartConfiguration.tcl
-install_manifest.txt
-Testing/
+# CMake build dir
+build/
 
 # Repositories downloaded by CI integration scripts
 tmp-deps/
@@ -131,7 +124,3 @@ nbproject/
 
 # editor backups
 *~
-# CMake in general
-builds/cmake/
-CMake*
-*.cmake
