--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -30,8 +30,8 @@ Build-Depends: debhelper (>= 9),
     libczmq-dev (>= 3.0.2),
     libmlm-dev (>= 1.0.0),
     libfty-common-logging-dev,
-    libfty-proto-dev (>= 1.0.0),
-    libfty-shm-dev (>= 1.0.0),
+    libfty-proto-dev,
+    libfty-shm-dev,
     gcc (>= 4.9.0), g++ (>= 4.9.0),
     systemd,
     dh-systemd,
