--- a/resources/fty-metric-compute.conf.in
+++ b/resources/fty-metric-compute.conf.in
@@ -1,3 +1,3 @@
 # create runtime directories for fty-metric-compute
-d /var/lib/fty/fty-metric-compute 0755 bios root
+d /var/lib/fty/fty-metric-compute 0755 @MC_USER@ root
 x /var/lib/fty/fty-metric-compute/*
