--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -25,18 +25,11 @@ Standards-Version: 4.0.1.0
 Build-Depends: debhelper (>= 9),
     cmake (>=3.0),
     fty-cmake-dev,
-    pkg-config,
-    libsodium-dev,
     libczmq-dev (>= 3.0.2),
     libmlm-dev (>= 1.0.0),
     libfty-common-logging-dev,
     libfty-proto-dev,
-    libfty-shm-dev,
-    gcc (>= 4.9.0), g++ (>= 4.9.0),
-    systemd,
-    dh-systemd,
-    asciidoc-base | asciidoc, xmlto,
-    dh-autoreconf
+    libfty-shm-dev
 
 Package: fty-metric-compute
 Architecture: any
