--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -20,7 +20,7 @@
 Source:         fty-metric-compute
 Section:        net
 Priority:       optional
-Maintainer:     fty-metric-compute Developers <eatonipcopensource@eaton.com>
+Maintainer:     fty-metric-compute Developers <opensource@eaton.com>
 Standards-Version: 4.0.1.0
 Build-Depends: debhelper (>= 9),
     cmake (>=3.0),
